--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title><%- code %></title>
-    <link rel="stylesheet" type="text/css" href="<%- staticHost %>/stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="<%- staticHost %>/stylesheets/<%- clientGeneralCss %>">
 </head>
 <body>
     <div id="webMain">
