--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <link href="<%- staticHost %>/images/favorite.ico" type="image/x-icon" rel="Bookmark" />
     <link href="<%- staticHost %>/images/favorite.ico" type="image/x-icon" rel="icon" />
 
-    <link rel="stylesheet" type="text/css" href="<%- staticHost %>/stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="<%- staticHost %>/stylesheets/<%- clientGeneralCss %>">
     <link rel="stylesheet" type="text/css" href="<%- staticHost %>/stylesheets/<%- clientCss %>">
 
 
