--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,12 @@
     <link href="<%- staticHost %>/images/favorite.ico" type="image/x-icon" rel="Bookmark" />
     <link href="<%- staticHost %>/images/favorite.ico" type="image/x-icon" rel="icon" />
 
-    <link rel="stylesheet" type="text/css" href="<%- staticHost %>/stylesheets/<%- clientGeneralCss %>">
+    <link rel="stylesheet" type="text/css" href="<%- staticHost %>/stylesheets/<%- clientGenericCss %>">
     <link rel="stylesheet" type="text/css" href="<%- staticHost %>/stylesheets/<%- clientCss %>">
+    
+    <% if (customGenericCss) { %>
+      <link rel="stylesheet" type="text/css" href="<%- staticHost %>/stylesheets/<%- customGenericCss %>">
+    <% } %>
 
 
   <script type="text/template" id="globalCSSTemplate"></script>
